--- a/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
@@ -52,7 +52,7 @@
     <button class="orange">
       Szeretnék jelentkezni a képzésre
     </button>
-    <button class="hollow">
+    <button class="hollow" (click)="clickRegistration()">
       Regisztrálom egy munkatársamat
     </button>
   </div>
