--- a/JegyzoInfo/ClientApp/src/app/components/more-info-dialog/more-info-dialog.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/more-info-dialog/more-info-dialog.component.scss
@@ -1,7 +1,7 @@
 @import "../../../varsAndMixins.scss";
 
 .dialogBox{
-  max-width: 800px;
+  width: 752px;
   position: relative;
   background-color: white;
   padding-top: 40px;
