--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -40,7 +40,7 @@
             </a>
           </ng-template>
           <hr/>
-          <app-login [loginIsOpened]="loginIsOpened" (loginSuccess)="logSucc($event)"></app-login>
+          <!-- <app-login [loginIsOpened]="loginIsOpened" (loginSuccess)="logSucc($event)"></app-login> -->
         </li>
       </ul>
       <ul class="mobileMenu">
