--- a/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
@@ -49,7 +49,7 @@
     </div>
   </ng-container>
   <div class="buttWrap">
-    <button class="orange">
+    <button class="orange" (click)="clickRegistrationMe()">
       Szeretnék jelentkezni a képzésre
     </button>
     <button class="hollow" (click)="clickRegistration()">
