--- a/JegyzoInfo/ClientApp/src/app/pages/courses-page/courses-page.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/courses-page/courses-page.component.html
@@ -47,8 +47,8 @@
     <h4>
       Képzéseink
     </h4>
-    <ng-container *ngIf="events.length > 0">
-      <app-course *ngFor="let item of events" [event]="item"></app-course>
+    <ng-container *ngIf="events.length > 0 && diaksHere">
+      <app-course *ngFor="let item of events" [event]="item" [diaks]="diaks"></app-course>
     </ng-container>
   </div>
 </div>
