--- a/JegyzoInfo/ClientApp/src/app/components/thx-dialog/thx-dialog.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/thx-dialog/thx-dialog.component.scss
@@ -24,6 +24,12 @@
     margin-bottom: 35px;
   }
 
+  p{
+    img.moodle{
+      margin: -13px 5px 0 5px;
+    }
+  }
+
   .buttWrap{
     margin-top: 35px;
     button.hollow{
