--- a/JegyzoInfo/ClientApp/src/app/app.component.html
+++ b/JegyzoInfo/ClientApp/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navigation></app-navigation>
   <router-outlet></router-outlet>
+  <div style="position: absolute; opacity: 0; z-index: -200;">
+    <img src="/assets/img/success.svg" alt="">
+    <img class="moodle" src="/assets/img/moodle.svg" alt="" />
+    <img class="moodle" src="/assets/img/backArrow.svg" alt="" />
+  </div>
 <app-footer></app-footer>
