--- a/JegyzoInfo/ClientApp/src/app/components/registration-dialog/registration-dialog.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/registration-dialog/registration-dialog.component.scss
@@ -29,6 +29,7 @@
     margin-top: 48px;
     .formRow{
       margin-bottom: 18px;
+      text-align: left;
       &.flex{
         display: flex;
         justify-content: space-between;
