--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -148,7 +148,7 @@
       </div>
     </div>
     <div class="buttonWrap">
-      <button class="orange">
+      <button class="orange" (click)="clickMoreInfo()">
         Érdekel az előfizetés
       </button>
     </div>
