--- a/JegyzoInfo/ClientApp/src/app/components/more-info-dialog/more-info-dialog.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/more-info-dialog/more-info-dialog.component.scss
@@ -46,6 +46,10 @@
           color: $slateLight;
         }
       }
+      .validity{
+        color: red;
+        font-size: 12px;
+      }
     }
   }
 
