--- a/JegyzoInfo/ClientApp/src/app/app.component.html
+++ b/JegyzoInfo/ClientApp/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-navigation></app-navigation>
   <router-outlet></router-outlet>
-  <div style="position: absolute; opacity: 0; z-index: -200;">
+  <div style="position: absolute; opacity: 0; z-index: -200; width: 1px; height: 1px; overflow: hidden;">
     <img src="/assets/img/success.svg" alt="">
     <img class="moodle" src="/assets/img/moodle.svg" alt="" />
     <img class="moodle" src="/assets/img/backArrow.svg" alt="" />
+    <img class="moodle" src="/assets/img/greekColsBack.jpg" alt="" />
+    <img class="moodle" src="/assets/img/housefeeling2.svg" alt="" />
   </div>
 <app-footer></app-footer>
