--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -1,6 +1,5 @@
 <div class="howItWorksWrap">
-  <div class="container">
-
+  <div class="content">
     <div class="title">
       <hr/>
       <h1>
@@ -9,7 +8,7 @@
     </div>
     <div class="process">
       <div class="leftSide">
-        <img src="/assets/img/howitworksman.svg" alt="">
+        <!-- <img src="/assets/img/howitworksman.svg" alt=""> -->
       </div>
       <div class="rightSide">
         <div class="row_01">
