--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -7,6 +7,7 @@ nav{
   width: 100%;
   display: flex;
   background-color: white;
+  box-shadow: 0px 4px 14px #dee6ea;
   .container{
     display: flex;
     justify-content: space-between;
