--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -88,6 +88,8 @@
   <app-online-courses></app-online-courses>
 </div>
 
-<div class="howItWorks" id="scrollHowItWorks">
-  <app-how-it-works></app-how-it-works>
+<div class="howItWorksWrap">
+  <div class="howItWorks" id="scrollHowItWorks">
+    <app-how-it-works></app-how-it-works>
+  </div>
 </div>
